Completed Our Family Section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>LifeKit</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
     </head>
     <body>
 
@@ -13,19 +14,48 @@
 
             <div class="container">
 
-                <div class="imageBox">
-
-                    <img src="img/pharell-williams.jpg">
-
-                    <div class="textBox">
-                        <h1> Image Hover Effect<h1>
+                <section>
+                    <h1>Pharell</h1>
+                    <p>Artist/Producer/Entrepreneur</p>
+                    <div class="textOverImage" 
+                    style="background-image: url(./img/pharell-williams.jpg)">
                     </div>
+                    <div class="social">
+                        <a href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true" ></i></a>
+                        <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true" ></i></a>
+                        <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true" ></i></a>
+                    </div>
+                </section>
 
-                </div>
+                <section>
+                    <h1>Jay</h1>
+                    <p>Artist/Entrepreneur</p>
+                    <div class="textOverImage" 
+                    style="background-image: url(./img/jay.jpg)">
+                    </div>
+                    <div class="social">
+                        <a href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true" ></i></a>
+                        <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true" ></i></a>
+                        <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true" ></i></a>
+                    </div>
+                </section>
 
+                <section>
+                    <h1>Kanye</h1>
+                    <p>Artist/Producer/Entrepreneur</p>
+                    <div class="textOverImage" 
+                    style="background-image: url(./img/kanye.jpg)">
+                    </div>
+                    <div class="social">
+                        <a href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true" ></i></a>
+                        <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true" ></i></a>
+                        <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true" ></i></a>
+                    </div>
+                </section>
 
 
             </div>
+
         </div>
         
     </body>
